<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.moviz.gui.activities.ActivityMain">
    <item
        android:id="@+id/action_workout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/workout"/>
    <item
        android:id="@+id/action_status"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/status"/>
    <item
        android:id="@+id/action_plot"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/plot"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/settings"/>
</menu>
