<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar" />

            <it.neokree.materialtabs.MaterialTabHost
                android:id="@+id/materialTabHost"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/app_bar"
                app:accentColor="@color/colorAccent"
                app:hasIcons="true"
                app:iconColor="@android:color/white"
                app:primaryColor="@color/colorPrimary" />
        </LinearLayout>


        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/container_app_bar"/>
        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            fab:menu_labels_style="@style/MenuLabelsStyle"
            fab:menu_labels_showAnimation="@anim/jump_from_down"
            fab:menu_labels_hideAnimation="@anim/jump_to_down"
            fab:menu_animationDelayPerItem="0"
            fab:menu_shadowColor="#444"
            fab:menu_colorNormal="@color/colorAccent"
            fab:menu_colorPressed="#F2AB00"
            fab:menu_colorRipple="#D99200">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_b_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_plus"
                fab:fab_label="@string/wv_up"
                style="@style/MenuButtonsStyle" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_b_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_minus"
                fab:fab_label="@string/wv_down"
                style="@style/MenuButtonsStyle" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_b_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_play"
                fab:fab_label="@string/wv_start"
                style="@style/MenuButtonsStyle" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_b_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_pause"
                fab:fab_label="@string/wv_pause"
                style="@style/MenuButtonsStyle" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_b_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_connect"
                fab:fab_label="@string/wv_connect"
                style="@style/MenuButtonsStyle" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_b_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_disconnect"
                fab:fab_label="@string/wv_disconnect"
                style="@style/MenuButtonsStyle" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_b_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_close"
                fab:fab_label="@string/wv_exit"
                style="@style/MenuButtonsStyle" />

        </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>

    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:name="com.moviz.gui.fragments.DrawerFragment"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer"
        android:tag="fragmentNavigationDrawer"/>
</android.support.v4.widget.DrawerLayout>